# HaskellStuff

./: .gitignore
LearningHaskell/: LICENSE  LearningHaskell.cabal
LearningHaskell/src/: HigherOrderFunctions.hs  Main.hs
