name:                LearningHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Suedo/LearningHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Somjit
maintainer:          example@example.com
copyright:           2018 Somjit
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable LearningHaskell
  hs-source-dirs:      src/
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
